The small changes

--- a/documentation/reference.htm
+++ b/documentation/reference.htm
@@ -2130,6 +2130,7 @@
   9.4.9: The base sprite subsystem has improved.<br>
   9.5: The source code synced with the Black game development kit 6.4.7.<br>
   9.5.1: The source code synced with the Black game development kit 6.4.9.<br>
-  9.5.2: The source code synced with the Black game development kit 6.5.1.<br></big>
+  9.5.2: The source code synced with the Black game development kit 6.5.1.<br>
+  9.5.3: The small changes.<br></big>
 </body>
 </html>
