The parallax background subsystem has improved

--- a/documentation/reference.htm
+++ b/documentation/reference.htm
@@ -2131,6 +2131,7 @@
   9.5: The source code synced with the Black game development kit 6.4.7.<br>
   9.5.1: The source code synced with the Black game development kit 6.4.9.<br>
   9.5.2: The source code synced with the Black game development kit 6.5.1.<br>
-  9.5.3: The small changes.<br></big>
+  9.5.3: The small changes.<br>
+  9.5.4: The parallax background subsystem has improved.<br></big>
 </body>
 </html>
