--- a/documentation/reference.htm
+++ b/documentation/reference.htm
@@ -2132,6 +2132,7 @@
   9.5.1: The source code synced with the Black game development kit 6.4.9.<br>
   9.5.2: The source code synced with the Black game development kit 6.5.1.<br>
   9.5.3: The small changes.<br>
-  9.5.4: The parallax background subsystem has improved.<br></big>
+  9.5.4: The parallax background subsystem has improved.<br>
+  9.5.5: The base sprite subsystem subsystem has improved.<br></big>
 </body>
 </html>
