The source code synced with the Black game development kit 7.3.5

--- a/documentation/reference.htm
+++ b/documentation/reference.htm
@@ -154,7 +154,7 @@
   <br>
   Send me an <a href="mailto:tuzik87@inbox.ru">email</a> if you want to contact me.</big></p>
   <h2><a class="mozTocH2" name="mozTocId85003" id="mozTocId85003"></a><big>Chapter 2. A special thanks</big></h2>
-  <p><big>I want to say &laquo;Big thanks for technical consultation&raquo; to these people:</big></p>
+  <p><big>I want to say «Big thanks for technical consultation» to these people:</big></p>
   <ul>
     <li><a href="https://github.com/dmitrysmagin"><big>Dmitry Smagin</big></a></li>
     <li><a href="https://bsg.org.ua/"><big>Pavel Samko</big></a></li>
@@ -168,33 +168,33 @@
   <p><big>Thanks to the PVS-Studio team for the <a href="https://www.viva64.com/en/b/0614/">free license</a>.</big></p>
   <h2><a class="mozTocH2" name="mozTocId810132" id="mozTocId810132"></a><big>Chapter 3. License</big></h2>
   <p><big><span style="text-decoration: underline;">Eugene game development kit license</span><br>
-  <br></big> <big>Copyright (C) 2021 &ndash; 2025 Popov Evgeniy Alekseyevich</big></p>
-  <p><big>&nbsp;This software is provided 'as&ndash;is', without any express or implied<br>
-  &nbsp;warranty. In no event will the authors be held liable for any damages<br>
-  &nbsp;arising from the use of this software.<br>
-  &nbsp;Permission is granted to anyone to use this software for any purpose,<br>
-  &nbsp;including commercial applications, and to alter it and redistribute it<br>
-  &nbsp;freely, subject to the following restrictions:<br>
-  &nbsp; 1. The origin of this software must not be misrepresented; you must not<br>
-  &nbsp;claim that you wrote the original software. If you use this software<br>
-  &nbsp;in a product, an acknowledgment in the product documentation would be<br>
-  &nbsp;appreciated but is not required.<br>
-  &nbsp;2. Altered source versions must be plainly marked as such, and must not be<br>
-  &nbsp;misrepresented as being the original software.<br>
-  &nbsp;3. This notice may not be removed or altered from any source distribution.</big><br>
+  <br></big> <big>Copyright (C) 2021 – 2025 Popov Evgeniy Alekseyevich</big></p>
+  <p><big>This software is provided 'as–is', without any express or implied<br>
+  warranty. In no event will the authors be held liable for any damages<br>
+  arising from the use of this software.<br>
+  Permission is granted to anyone to use this software for any purpose,<br>
+  including commercial applications, and to alter it and redistribute it<br>
+  freely, subject to the following restrictions:<br>
+   1. The origin of this software must not be misrepresented; you must not<br>
+  claim that you wrote the original software. If you use this software<br>
+  in a product, an acknowledgment in the product documentation would be<br>
+  appreciated but is not required.<br>
+  2. Altered source versions must be plainly marked as such, and must not be<br>
+  misrepresented as being the original software.<br>
+  3. This notice may not be removed or altered from any source distribution.</big><br>
   <br>
-  <big><span style="text-decoration: underline;">Third&ndash;party license</span><br>
-  <br></big> <big>Copyright (c) 2007 &ndash; 2010 The Khronos Group Inc.</big></p>
+  <big><span style="text-decoration: underline;">Third–party license</span><br>
+  <br></big> <big>Copyright (c) 2007 – 2010 The Khronos Group Inc.</big></p>
   <p><big>Permission is hereby granted, free of charge, to any person obtaining a<br>
-  &nbsp;copy of this software and/or associated documentation files (the<br>
-  &nbsp;"Materials"), to deal in the Materials without restriction, including<br>
-  &nbsp;without limitation the rights to use, copy, modify, merge, publish,<br>
-  &nbsp;distribute, sublicense, and/or sell copies of the Materials, and to<br>
-  &nbsp;permit persons to whom the Materials are furnished to do so, subject to<br>
-  &nbsp;the following conditions:<br>
-  &nbsp; The above copyright notice and this permission notice shall be included<br>
-  &nbsp;in all copies or substantial portions of the Materials.<br>
-  &nbsp; THE MATERIALS ARE PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE MATERIALS OR THE USE OR OTHER DEALINGS IN THE MATERIALS.</big></p>
+  copy of this software and/or associated documentation files (the<br>
+  "Materials"), to deal in the Materials without restriction, including<br>
+  without limitation the rights to use, copy, modify, merge, publish,<br>
+  distribute, sublicense, and/or sell copies of the Materials, and to<br>
+  permit persons to whom the Materials are furnished to do so, subject to<br>
+  the following conditions:<br>
+   The above copyright notice and this permission notice shall be included<br>
+  in all copies or substantial portions of the Materials.<br>
+   THE MATERIALS ARE PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE MATERIALS OR THE USE OR OTHER DEALINGS IN THE MATERIALS.</big></p>
   <h2><a class="mozTocH2" name="mozTocId336772" id="mozTocId336772"></a><big>Chapter 4. System requirements</big></h2>
   <p><big>You can see the minimum system requirements below.</big></p>
   <table border="1">
@@ -269,7 +269,7 @@
   <br>
   You need one of the following compilers for <a href="https://en.wikipedia.org/wiki/Windows_XP">Windows XP</a> support:<br></big></p>
   <ul>
-    <li><big>TDM&ndash;GCC</big></li>
+    <li><big>TDM–GCC</big></li>
     <li><big>Open Watcom</big></li>
     <li><big>Open Watcom V2 Fork</big></li>
     <li><big>Visual C++ 2003</big></li>
@@ -284,8 +284,8 @@
   <p><big>Disable pre-compiled headers before starting compilation. Old Visual C++ users can do it via the project creation wizard.<br>
   Visual C++ 2017 or higher users must follow these steps:<br></big></p>
   <ul>
-    <li><big>Go to &laquo;Project Properties&mdash;C/C++&mdash;Precompiled Headers&raquo;</big></li>
-    <li><big>Set the &laquo;Precomiled Header&raquo; option to &laquo;Not Using Precompiled Headers&raquo;.</big></li>
+    <li><big>Go to «Project Properties — C/C++ — Precompiled Headers»</big></li>
+    <li><big>Set the «Precomiled Header» option to «Not Using Precompiled Headers».</big></li>
   </ul>
   <p><big><span style="text-decoration: underline;">Notes for MINGW-w64 and TDM-GCC users</span></big></p>
   <p><big>Don't forget to link your program with these files:</big></p>
@@ -484,7 +484,7 @@
   <span style="font-style: italic;">bool Background::is_last_frame() const; -</span> Return true if the current frame is the last frame.<br>
   <br></big> <big><span style="font-style: italic;">bool Background::check_frame(const unsigned int target) const; -</span> Return true if the target frame is valid.</big><br>
   <br>
-  <big><span style="font-style: italic;">&nbsp;unsigned int Background::get_frame() const; -</span> Return the current frame.<br>
+  <big><span style="font-style: italic;">unsigned int Background::get_frame() const; -</span> Return the current frame.<br>
   <br>
   <span style="font-style: italic;">unsigned int Background::get_frames() const; -</span> Return the number of the frames.<br>
   <br>
@@ -887,6 +887,10 @@
   <br style="font-style: italic;">
   <span style="font-style: italic;">unsigned int Camera::get_highest_y() const; -</span> Return the highest allowable y-coordinate of the current visible area.<br>
   <br>
+  <span style="font-style: italic;">unsigned int Camera::get_lowest_x() const; -</span> Return the lowest allowable x-coordinate of the current visible area.<br>
+  <br>
+  <span style="font-style: italic;">unsigned int Camera::get_lowest_y() const; -</span> Return the lowest allowable y-coordinate of the current visible area.<br>
+  <br>
   <span style="font-style: italic;">unsigned int Camera::get_highest_x_offset() const; -</span> Return the highest allowable x-offset of the camera.<br>
   <br style="font-style: italic;">
   <span style="font-style: italic;">unsigned int Camera::get_highest_y_offset() const; -</span> Return the highest allowable y-offset of the camera.<br>
@@ -1018,10 +1022,10 @@
   <br>
   <span style="font-style: italic;">typedef struct</span><span style="font-style: italic;"><br>
   {</span><br>
-  &nbsp;<span style="font-style: italic;">unsigned int x;</span><br>
-  <span style="font-style: italic;">&nbsp;unsigned int y;</span><br>
-  <span style="font-style: italic;">&nbsp;unsigned int width;</span><br>
-  <span style="font-style: italic;">&nbsp;unsigned int height;</span><span style="font-style: italic;"><br>
+  <span style="font-style: italic;">unsigned int x;</span><br>
+  <span style="font-style: italic;">unsigned int y;</span><br>
+  <span style="font-style: italic;">unsigned int width;</span><br>
+  <span style="font-style: italic;">unsigned int height;</span><span style="font-style: italic;"><br>
   } BOX;</span><br>
   <br>
   <span style="text-decoration: underline;">Work with a collision detector</span><br>
@@ -1185,9 +1189,9 @@
   <h2><a class="mozTocH2" name="mozTocId783369" id="mozTocId783369"></a><big>Chapter 1. The sub-namespace</big></h2>
   <p><big>All classes in this section are declared in the <span style="font-style: italic;">Input</span> sub-namespace.</big></p>
   <h2><a class="mozTocH2" name="mozTocId685403" id="mozTocId685403"></a><big>Chapter 2. Keyboard</big></h2>
-  <p><big><span style="text-decoration: underline;">Low&ndash;level input</span><br>
+  <p><big><span style="text-decoration: underline;">Low–level input</span><br>
   <br>
-  Any keyboard has a built-in chip. It generates a special code when the user presses or releases the key. This code is called a &laquo;scan code&raquo;.<br>
+  Any keyboard has a built-in chip. It generates a special code when the user presses or releases the key. This code is called a «scan code».<br>
   <br>
   <span style="text-decoration: underline;">Working with the keyboard</span><br>
   <br>
@@ -1662,15 +1666,15 @@
   <big style="font-style: italic;">typedef struct Vertex</big><big style="font-style: italic;"><br>
   {</big><br>
   <big style="font-style: italic;">int x;</big><big style="font-style: italic;"><br>
-  &nbsp;int y;<br></big> <big style="font-style: italic;">};</big><br>
+  int y;<br></big> <big style="font-style: italic;">};</big><br>
   <br>
   <big>A single texture coordinate represents the following custom data type:</big><br>
   <br>
   <big style="font-style: italic;">typedef struct</big> <big style="font-style: italic;"><br>
-  {<br></big> <big style="font-style: italic;">&nbsp;float u;</big><br>
+  {<br></big> <big style="font-style: italic;">float u;</big><br>
   <big style="font-style: italic;">float v;</big><big style="font-style: italic;"><br>
   } Point;</big><br>
-  <big>&nbsp;</big><br>
+  <big></big><br>
   <big>All these custom types are declared in the <span style="font-style: italic;">Core</span> sub-namespace.</big></p>
   <h2><a class="mozTocH2" name="mozTocId472209" id="mozTocId472209"></a><big>Chapter 4. Gamepad</big></h2>
   <p><big>The gamepad subsystem is working over the <a href="https://msdn.microsoft.com/ru-ru/library/windows/desktop/dd757116%28v=vs.85%29.aspx">Joystick Multimedia API</a>.</big></p>
@@ -2216,6 +2220,7 @@
   9.5.4: The parallax background subsystem has improved.<br>
   9.5.5-9.5.6: The base sprite subsystem subsystem has improved.<br>
   9.5.7: The base graphics subsystem has improved.<br>
-  9.5.8: The source code synced with the Black game development kit 7.3.3.<br></big>
+  9.5.8: The source code synced with the Black game development kit 7.3.3.<br>
+  9.5.9: The source code synced with the Black game development kit 7.3.5.<br></big>
 </body>
 </html>
