The source code synced with the Black game development kit 7.3.8

--- a/documentation/reference.htm
+++ b/documentation/reference.htm
@@ -2221,6 +2221,7 @@
   9.5.5-9.5.6: The base sprite subsystem subsystem has improved.<br>
   9.5.7: The base graphics subsystem has improved.<br>
   9.5.8: The source code synced with the Black game development kit 7.3.3.<br>
-  9.5.9: The source code synced with the Black game development kit 7.3.5.<br></big>
+  9.5.9: The source code synced with the Black game development kit 7.3.5.<br>
+  9.6: The source code synced with the Black game development kit 7.3.8.<br></big>
 </body>
 </html>
