The source code synced with the Black game development kit 7.4.8

--- a/documentation/reference.htm
+++ b/documentation/reference.htm
@@ -134,8 +134,7 @@
         Let me show the engine features. Let's go.</big></p>
     <ul>
       <li><big>Open source code.</big></li>
-      <li><big>Easy</big><big>-</big><big>to</big><big>-</big><big>use
-          object-oriented design.</big></li>
+      <li><big>Easy-to-use object-oriented design.</big></li>
       <li><big>Very fast.</big></li>
       <li><big>Minimum external dependencies: only <a href="https://learn.microsoft.com/en-us/windows/win32/directx">DirectX</a>,
           <a href="https://opengl.org">OPENGL</a>, and standard <a href="https://learn.microsoft.com/en-us/windows/win32/apiindex/windows-api-list">Windows
@@ -1491,14 +1490,6 @@
         unsigned screen_int y) const; -</span> Convert the screen y-coordinate
       to the world y-coordinate.<br>
       <br>
-      <span style="font-style: italic;">unsigned int Camera::get_screen_x(const
-        unsigned int world_x) const; -</span> Convert the world x-coordinate to
-      the screen x-coordinate.<br>
-      <br>
-      <span style="font-style: italic;">unsigned int Camera::get_screen_y(const
-        unsigned int world_y) const; -</span> Convert the world y-coordinate to
-      the screen y-coordinate.<br>
-      <br>
       <span style="font-style: italic;">unsigned int Camera::set_x(const
         unsigned int x); -</span> Set the x-coordinate of the camera offset and
       return it.<br>
@@ -1561,7 +1552,7 @@
         The Cartesian coordinates start at the center of the screen. Look at
         this picture to understand it.<br>
       </big></p>
-    <p><big><img style="width: 107px; height: 111px;" alt="" src="file:///D:/%D0%9E%D0%B1%D1%80%D0%B0%D0%B7/eugenegdk/Version%209.6.2/eugenegdk/documentation/cartesian_system.png"><br>
+    <p><big><img style="width: 107px; height: 111px;" src="cartesian_system.png"><br>
         <br>
         <span style="text-decoration: underline;">Coordinates conversion</span><br>
         <br>
@@ -2701,9 +2692,7 @@
         It is available as part of <a href="https://en.wikipedia.org/wiki/DirectX">DirectX</a>.
         DirectX is pre-installed by default under the modern versions of
         Windows.</big></p>
-    <h1><a class="mozTocH1" name="mozTocId670307" id="mozTocId670307"></a><big>Version
-        history<br>
-      </big></h1>
+    <h1><a class="mozTocH1" name="mozTocId670307" id="mozTocId670307"></a><big>Version history<br></big></h1>
     <big>0.1: Initial version.<br>
       0.1.1-0.7.6: The internal unstable builds.<br>
       0.7.7: The small changes.<br>
@@ -3077,8 +3066,7 @@
       7.5.8: The coordinates conversion subsystem has improved.<br>
       7.5.9-7.6.1: The isometric subsystem has improved.<br>
       7.6.2: The tile-map subsystem has improved.<br>
-      7.6.3: The image resizer is backported from the Eugene game development
-      kit 7.4.5.<br>
+      7.6.3: The image resizer is backported from the Eugene game development kit 7.4.5.<br>
       7.6.4: The small bug in the tile-map subsystem has been fixed.<br>
       7.6.5: The coordinates conversion subsystem has improved.<br>
       7.6.6: The base graphics subsystem has improved.<br>
@@ -3113,8 +3101,7 @@
       8.0.7: The image resizer has improved.<br>
       8.0.8-8.0.9: The texture loader has improved.<br>
       8.1-8.1.1: The picture subsystem has improved.<br>
-      8.1.2: The image resizer is backported from the Eugene game development
-      kit 8.0.5.<br>
+      8.1.2: The image resizer is backported from the Eugene game development kit 8.0.5.<br>
       8.1.3: The texture loader has improved.<br>
       8.1.4: The small changes.<br>
       8.1.5: The image resizer has improved.<br>
@@ -3228,6 +3215,7 @@
       9.6: The source code synced with the Black game development kit 7.3.8.<br>
       9.6.1: The source code synced with the Black game development kit 7.3.9.<br>
       9.6.2: The small bug has been fixed.<br>
+      9.6.3: The source code synced with the Black game development kit 7.4.8.<br>
     </big>
   </body>
 </html>
