The source code synced with the Black game development kit 7.5

--- a/documentation/reference.htm
+++ b/documentation/reference.htm
@@ -131,9 +131,9 @@
         <br>
         <span style="text-decoration: underline;">Features</span><br>
         <br>
-        Let me show the engine features. Let's go.</big></p>
+        Let me show you the engine features. Let's go.</big></p>
     <ul>
-      <li><big>Open source code.</big></li>
+      <li><big>Open-source code.</big></li>
       <li><big>Easy-to-use object-oriented design.</big></li>
       <li><big>Very fast.</big></li>
       <li><big>Minimum external dependencies: only <a href="https://learn.microsoft.com/en-us/windows/win32/directx">DirectX</a>,
@@ -1398,7 +1398,7 @@
         16. Camera</big></h2>
     <big><span style="text-decoration: underline;">A few words about the camera</span><br>
       <br>
-      The 2D camera defines a size of visible area. It will be stretched to the
+      The 2D camera defines the size of the visible area. It will be stretched to the
       screen resolution before rendering the game scene.<br>
       <br style="text-decoration: underline;">
       <span style="text-decoration: underline;">Work with the camera</span><br>
@@ -3216,6 +3216,7 @@
       9.6.1: The source code synced with the Black game development kit 7.3.9.<br>
       9.6.2: The small bug has been fixed.<br>
       9.6.3: The source code synced with the Black game development kit 7.4.8.<br>
+      9.6.4: The source code synced with the Black game development kit 7.5.<br>
     </big>
   </body>
 </html>
