The source code synced with the Black game development kit 7.5.1

--- a/documentation/reference.htm
+++ b/documentation/reference.htm
@@ -1398,8 +1398,8 @@
         16. Camera</big></h2>
     <big><span style="text-decoration: underline;">A few words about the camera</span><br>
       <br>
-      The 2D camera defines the size of the visible area. It will be stretched to the
-      screen resolution before rendering the game scene.<br>
+      The 2D camera defines the size of the visible area. It will be stretched
+      to the screen resolution before rendering the game scene.<br>
       <br style="text-decoration: underline;">
       <span style="text-decoration: underline;">Work with the camera</span><br>
       <br>
@@ -1464,14 +1464,6 @@
       <br style="font-style: italic;">
       <span style="font-style: italic;">unsigned int Camera::get_highest_y()
         const; -</span> Return the highest allowable y-coordinate of the current
-      visible area.<br>
-      <br>
-      <span style="font-style: italic;">unsigned int Camera::get_lowest_x()
-        const; -</span> Return the lowest allowable x-coordinate of the current
-      visible area.<br>
-      <br>
-      <span style="font-style: italic;">unsigned int Camera::get_lowest_y()
-        const; -</span> Return the lowest allowable y-coordinate of the current
       visible area.<br>
       <br>
       <span style="font-style: italic;">unsigned int
@@ -2692,7 +2684,9 @@
         It is available as part of <a href="https://en.wikipedia.org/wiki/DirectX">DirectX</a>.
         DirectX is pre-installed by default under the modern versions of
         Windows.</big></p>
-    <h1><a class="mozTocH1" name="mozTocId670307" id="mozTocId670307"></a><big>Version history<br></big></h1>
+    <h1><a class="mozTocH1" name="mozTocId670307" id="mozTocId670307"></a><big>Version
+        history<br>
+      </big></h1>
     <big>0.1: Initial version.<br>
       0.1.1-0.7.6: The internal unstable builds.<br>
       0.7.7: The small changes.<br>
@@ -3217,6 +3211,7 @@
       9.6.2: The small bug has been fixed.<br>
       9.6.3: The source code synced with the Black game development kit 7.4.8.<br>
       9.6.4: The source code synced with the Black game development kit 7.5.<br>
+      9.6.5: The source code synced with the Black game development kit 7.5.1.<br>
     </big>
   </body>
 </html>
