The source code synced with the Black game development kit 7.5.2

--- a/documentation/reference.htm
+++ b/documentation/reference.htm
@@ -818,6 +818,12 @@
       <i>void Parallax::load(const char *name); -</i> Load a background from the
       target file.<br>
       <br>
+      <i>void Parallax::set_horizontal_speed(const float speed);
+        -</i> Set the horizontal scrolling speed.<br>
+      <br>
+       <i>void Parallax::set_vertical_speed(const float speed);
+        -</i> Set the vertical scrolling speed.<br>
+      <br>
       <i>void Parallax::set_speed(const float horizontal,const float vertical);
         -</i> Set the scrolling speed.<br>
       <br>
@@ -1574,7 +1580,7 @@
       interval.<br>
       <br>
       <i>bool Timer::check_timer(); -</i> Return true and reinitialize the
-      start point if the interval between the stop and start points is large
+      start point if the interval between the stop and start points is larger
       than or equal to a specific number of seconds.<br>
     </big>
     <h2><a id="mozTocId908141" class="mozTocH2"></a><big>Chapter 4. Collision</big></h2>
@@ -3038,6 +3044,7 @@
       9.6.4: The source code synced with the Black game development kit 7.5.<br>
       9.6.5: The source code synced with the Black game development kit 7.5.1.<br>
       9.6.5.1: The documentation has been updated.<br>
+      9.6.6: The source code synced with the Black game development kit 7.5.2.<br>
     </big>
   </body>
 </html>
